# fastapi-crud

./: .env.example  .gitignore  README.md  config.py  db.py  main.py  pyproject.toml
models/: user.py
routers/: user.py
schemas/: __init__.py  user.py
